refactoring of the dependency tracing and added type hinting. Isuru Fernando
(IF) developed the Universal2 (arm64) support. Min Ragan-Kelley (MinRK) did a
lot of work discussing OSX things with MB, and contributed fixes as well.

See `this Changelog site <https://keepachangelog.com/en/1.0.0>`_ for helpful
rules on making a good Changelog.

********
Releases
********

* [Unreleased]

* [0.10.1] - 2021-11-23

  Bugfix release.

  * Delocate will no longer fail when libraries use different install names to
    refer to the same library.
    [#134](https://github.com/matthew-brett/delocate/pull/134)

* [0.10.0] - 2021-09-22

  First release that requires Python 3.

  * ``wheel_libs`` now supports recursive dependencies.
  * ``listdeps`` command now supports recursive dependencies.
    [#118](https://github.com/matthew-brett/delocate/pull/118)
  * Wheels with top-level extension modules or wheels using namespaces can now
    be delocated.
    [#123](https://github.com/matthew-brett/delocate/pull/123)
  * Wheels with multiple packages will no longer copy duplicate libraries.
    [#35](https://github.com/matthew-brett/delocate/issues/35)
  * ``delocate.tools.back_tick`` has been deprecated.
    [#126](https://github.com/matthew-brett/delocate/pull/126)

* [0.9.1] - 2021-09-17

  Bugfix release.

  * Fixed issue where Delocate would attempt to modify the install names of a
    non-copied library which dynamically links to a copied library.
    [#120](https://github.com/matthew-brett/delocate/pull/120)

* [0.9.0] - 2021-07-17

  Refactoring, updating and `arm64` (M1) support.

  * Libraries depending on ``@loader_path`` are now supported (KB).
  * ``@executable_path`` is supported and defaults to the current Python
    executable path.  This can be changed with the ``--executable-path`` flag
    (KB).
  * The ``--ignore-missing-dependencies`` flag can be given to ignore errors and
    delocate as many dependencies as possible (KB).