@@ -20,7 +20,7 @@ setup(
     install_requires=[
         "machomachomangler; sys_platform == 'win32'",
         "bindepend; sys_platform == 'win32'",
-        "wheel",
+        "wheel>=0.32.0",
         "typing_extensions",
     ],
     package_data={
